# frenchlottery

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: github-actions.yml  python-publish.yml  python-test.yml
data/: euromillions_results.csv  loto.csv  loto_sorted.csv
data/original/: euromillions_6.csv
euromillions/: __init__.py  draws.py  euromillions.py  helper.py  main.py  results.py  test.py
euromillions/data/export/: euromillions.csv
euromillions/data/formatted/: euromillions.csv
euromillions/data/original/: euromillions_6.csv
lottery/: __init__.py  __main__.py  euromillions_helper.py  helper.py  loto_helper.py  main.py
lottery/data/euromillions/formatted/: euromillions.csv
lottery/data/euromillions/original/: euromillions_3.csv  euromillions_6.csv
lottery/euromillions/: draws.py
lottery/helper/: file_helper.py  pandas_helper.py
src/frenchlottery/: __init__.py  __main__.py  constants.py  domain.py  euromillions_helper.py  helper.py  loto_helper.py
src/frenchlottery/data/: euro_2004_2020.csv  loto_2008_2019.csv
src/lottery/: __init__.py  __main__.py  euromillions_helper.py  loto_helper.py
tests/: test_euromillions_data.py  test_loto_data.py
