[tool.poetry]
name = "lottery"
version = "1.0.0"
description = "Simple tool to retrieve lottery data from FDJ"
authors = ["Nicolas Voisin <voisin.nicolas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
