[project]
name = "lottery"
version = "0.1.0"
description = "Get up-to-date lottery draws from FDJ"
authors = [
    {name = "Nicolas Voisin",email = "voisin.nicolas@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
ruff = "^0.9.3"

[tool.ruff]
line-length = 120

