[project]
name = "frenchlottery"
version = "0.4.0"
description = "Get up-to-date lottery draws from FDJ"
authors = [{ name = "Nicolas Voisin", email = "voisin.nicolas@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["pandas (>=2.2.3,<3.0.0)", "requests (>=2.32.3,<3.0.0)"]

[dependency-groups]
dev = ["pytest>=8.3.4"]


[project.urls]
Homepage = "https://github.com/nick-voisin/frenchlottery"
Issues = "https://github.com/nick-voisin/frenchlottery/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
